<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alphacr.theredjournal.ForgotPassword">

    <TextView
        android:text="@string/forgot"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:id="@+id/lostPswText" />

    <TextView
        android:text="@string/forgot_help"
        android:textAlignment="center"
        android:textSize="7pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lostPswText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/instructionText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:hint="@string/email"
        android:layout_below="@+id/instructionText"
        android:layout_alignRight="@+id/lostPswText"
        android:layout_alignEnd="@+id/lostPswText"
        android:layout_marginTop="54dp" />

    <ImageView
        tools:ignore="ContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logocropred"
        android:layout_marginTop="28dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/send"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSend"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_marginBottom="29dp"
        android:layout_alignRight="@+id/emailField"
        android:layout_alignEnd="@+id/emailField" />
</RelativeLayout>
